---
source: tests/main.rs
info:
  program: nosh
  args:
    - food
    - search
    - potato
  env:
    NOSH_SEARCH_URL: "http://[::1]:38967/test"
    XDG_DATA_HOME: /tmp/.tmpANRul1
  stdin: "1"
---
success: true
exit_code: 0
----- stdout -----
┌───────┬───────────────────────────────────┬──────┬─────┬─────────┬──────┬──────────┐
│ index │ name                              │ carb │ fat │ protein │ kcal │ servings │
├───────┼───────────────────────────────────┼──────┼─────┼─────────┼──────┼──────────┤
│ 0     │ Flour, potato                     │ 79.9 │ 1.0 │ 8.1     │ 353  │ 100g     │
│ 1     │ Potatoes, gold, without skin, raw │ 16.0 │ 0.3 │ 1.8     │ 72   │ 100g     │
└───────┴───────────────────────────────────┴──────┴─────┴─────────┴──────┴──────────┘

[0-1],(n)ext,(q)uit? Added 'Potatoes, gold, without skin, raw' as potato

----- stderr -----
